# diktum

./: .gitignore  LICENSE  README.md  Запустить Диктум.command  Настроить Диктум.command  Остановить Диктум.command  Проверить Диктум.command  Разблокировать Диктум.command
app/: .env.example  pyproject.toml
app/config/: hotwords.example.txt
app/scripts/: build_install_pack.sh  doctor_local_mac.sh  setup_gigastt.sh  setup_local_mac.sh  start_server.sh  stop_server.sh  unblock_macos.sh
app/src/voice_recognizer/: audio.py  cli.py  diarization.py  engines.py  formatting.py  gigastt.py  multipart.py  transcript_repair.py  web.py
